# noesis-connectors

./: .gitignore  CONTRIBUTING.md  DOCKER_CATALOG_GUIDE.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_request.yml  feature_request.yml
.github/workflows/: ci.yml
api/: buf.gen.yaml  buf.yaml
api/connector/v1/: connector.proto
catalog/: index.json
connectors/postgres/: Dockerfile  README.md  connector.yaml  go.mod  go.sum
connectors/postgres/cmd/connector/: main.go
connectors/postgres/internal/config/: config.go
connectors/postgres/internal/postgres/: client.go  handler.go  reader.go  reader_test.go  splitter.go
connectors/tdp/: Dockerfile  connector.yaml  go.mod  go.sum
connectors/tdp/cmd/connector/: main.go
connectors/tdp/internal/config/: config.go
connectors/tdp/internal/tdp/: client.go  handler.go  reader.go  types.go
docs/: mkdocs.yml  requirements.txt
libs/go/: go.mod
libs/go/logging/: structured.go
libs/go/metrics/: prometheus.go
libs/python/: pyproject.toml
libs/python/src/noesis_connectors_libs/: __init__.py
scripts/: build-and-push-connector.sh  build-and-push-connectors.sh
sdks/go/: go.mod  go.sum
sdks/go/client/: grpc.go
sdks/go/cursor/: manager.go
sdks/go/schema/: arrow.go
sdks/go/server/: base.go
sdks/go/streaming/: stream.go
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: index.ts
sdks/node/src/client/: grpc-client.ts
sdks/node/src/server/: base-server.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/noesis_connectors/: __init__.py  client.py  server.py
tools/connector-scaffold/: cookiecutter.json
tools/proto-gen/: generate.sh
tools/test-harness/: README.md
