[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noesis-connectors-libs"
dynamic = ["version"]
description = "Shared libraries for Noesis connectors"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Noesis Team", email = "team@noesis.dev" },
]
keywords = ["data", "connectors", "arrow", "metrics", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=15.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.version]
path = "src/noesis_connectors_libs/__init__.py"